# fishman-ctags

./: .gitignore  Makefile.am  Makefile.in  autogen.sh  c.c  configure.ac  go.c  options.c  source.mak  sql.c
Units/go-goroutines.d/: expected.tags
Units/go-helloworld.d/: expected.tags
Units/go-op-less-than.d/: expected.tags
Units/go-timeouts.d/: expected.tags
Units/go-torture.d/: expected.tags
Units/parser-javascript.r/js-arraylist.d/: expected.tags  input.js
Units/parser-php.r/php-strings.d/: expected.tags  input.php
Units/parser-swift.r/simple-class.d/: expected.tags  input.swift
Units/parser-swift.r/wikipedia.d/: args.ctags  expected.tags  input.swift
docs/: news.rst
main/: options.c  parsers.h
man/: ctags.1.in  ctags.1.in.rst
parsers/: jscript.c  php.c  swift.c
win32/: ctags_vs2013.vcxproj  ctags_vs2013.vcxproj.filters
